<resources>
    <string name="app_name">Sri Guru Granth Sahib Ji Quotes</string>
    <string name="tab_Final_Quote">Quote</string>
    <string name="tab_text_1">The Khalsa belongs to God; all victory is the victory of God.</string>
    <string name="tab_text_2">ਵਾਹਿਗੁਰੂ ਜੀ ਕਾ ਖ਼ਾਲਸਾ, ਵਾਹਿਗੁਰੂ ਜੀ ਕੀ ਫਤਹਿ।</string>
    <string name="message_quote">Get Quote</string>
    <string name="message_hukamnama">Hukamnama</string>
    <string name="message_ardaas">Ardaas</string>
    <string name="message_nitnem">Nitnem</string>
    <string name="message_sangat">Sangat</string>
    <string name="message_calendar">Calendar</string>
    <string name="title_activity_ardaas">Ardaas</string>
    <string name="large_text1">"Coming Soon"</string>
    <string name="large_text2">
        "Introduction:
‘Nit’ means daily, regularly or always. ‘Nem’ is the Punjabi form of ‘Neeam’ meaning law, rule or practice. ‘Nitnem’ thus means ‘daily practice’.

Nit Nem is a collaboration of different banis that were designated to be read by sikhs every day - the banis to be read has been prescribed in the Panthic Sikh Reht Maryada, (the Sikh Code of Conduct).

The Nit Nem bani's usually include the Panj bania which are read in the morning between 3:00 am and 6:00 am (this period is considered as Amrit Vela or the Ambrosial Hours) and Rehras Sahib in the evening 6pm and Kirtan Sohila at night before sleeping. The morning Nitnem was corrected to include all 5 Banian; Japji Sahib, Jaap Sahib, Svaiyye, Chaupai Sahib and Anand Sahib.

Morning Nitnem:
Japji Sahib - is the first sacred composition found in the Guru Granth Sahib. It is a famous and concise summary of Sikh philosophy which was compiled by Guru Nanak Dev Ji. The compilation consists of the Mool Mantar, an opening Salok or verse, a set of 38 Pauris and a final closing Salok. This Bani called Japji Sahib, appears at the very beginning of the Guru Granth Sahib. The word Jap means to recite/to chant. Ji is a word that is used to show respect as is the word ‘Sahib’.

Jaap Sahib - is the bani uttered by Guru Gobind Singh Ji. It is the second bani of the five in the daily morning prayer routine of a Sikh. Jaap Sahib is made up of 199 verses and is the first Bani of Sri Dasam Granth Sahib Ji. The language of Jaap has words and compounds drawn from Sanskrit, Brij Bhasha, Arabic and Persian.

Tav Prasad Swayae - is bani composed by Guru Gobind Singh which tells us how to worship and realise God. This Bani appears in Sri Dasam Granth Sahib Ji. Historical accounts says that this bani was composed for Raja Bhim Chand when Guru ji was in Paunta Sahib to show him that by having thousands of forces or infinite land or kingdoms, one cannot attain God.

Kabiobach Benti Chaupai - is bani composed by Guru Gobind Singh and appears in Sri Dasam Granth Sahib Ji. The Bani offers protection and security and many Sikhs recite this bani to gain spiritual safety and defence from external and internal enemies, worries and afflictions. The Gurmukhi text is simple yet very powerful and gives one self confidence and an upbeat feeling. This bani gives one the feeling of reliability and dependability on the Lord. If one has negative feelings and a lack of confidence in the future, one should recite this bani to get an instant boost.

Anand Sahib - is bani that was written by Guru Amar Das Ji and appears in Sri Guru Granth Sahib Ji. It is said that the person who recites this Holy Bani daily with dedication, attention and comprehension, will achieve Anand (Complete Happiness or Bliss) in life.

Evening Nitnem:
Rehiras Sahib - is the evening prayer of the Sikhs, which speaks of the greatness of Waheguru. As recorded in the Guru Granth Sahib Ji, it contains the hymns of five different Gurus; Guru Nanak Dev Ji, Guru Amar Das Ji, Guru Ram Das Ji, Guru Arjan Dev Ji and Guru Gobind Singh Ji. Each section of the prayer casts light on another aspect of God. It is recited after a hard days work when one is tired. It adds energy to both the body and the mind allowing one to conclude their day, giving thanks to the Almighty for the completion of another successful day.

Night Nitnem:
Kirtan Sohila - is the night time prayer said by all Sikhs before they go to sleep. The first three shabads were uttered by Guru Nanak Dev Ji, the fourth shabad by Guru Ram Das Ji and the fifth shabad by Guru Arjan Dev. This bani describes the pain of separation and celebrating the bliss of union.
        "</string>
    <string name="action_settings">Settings</string>
</resources>